# cmdRadioPy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.json  history.json  m3u_parser.py  main.py  player.py  pyproject.toml  requirements.txt  version.py
.github/workflows/: ci.yml  release-linux-deb.yml  release-windows.yml
packaging/: README.md
packaging/chocolatey/: cmdradiopy.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/debian/: changelog  control  copyright
packaging/scoop/: cmdradiopy.json
packaging/windows/: README.md  build-win64.ps1
