[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdradiopy"
dynamic = ["version"]
description = "Reproductor de radio en terminal con soporte M3U y OSD propia"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "cmdRadioPy contributors" }
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Sound/Audio :: Players"
]

[project.urls]
Homepage = "https://github.com/smelpillow/cmdRadiopy"
Repository = "https://github.com/smelpillow/cmdRadiopy"

[project.optional-dependencies]
ui = [
  "charstyle>=1.0.0",
  "colorama>=0.4.0"
]
build-win = [
  "pyinstaller>=6.0"
]

[project.scripts]
cmdradiopy = "main:main"

[tool.setuptools]
py-modules = ["main", "player", "m3u_parser", "version"]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = { attr = "version.APP_VERSION" }
